--- a/ajax.css
+++ b/ajax.css
@@ -38,16 +38,31 @@ h4 {
 .image_content {
     position: relative;
     top: 200px;
-    left: 600px;
-    width: 300px;
-    height: 300px;
+    left: 500px;
+    width: 500px;
+    height: 550px;
+    border-radius: 15px;
+    background-color: #000080;
+    margin: 0;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 8px 8px 8px #114d99;
+}
+
+.container {
+    background-color: #fff;
+    margin: 10px;
+    width: 450px;
+    height: 450px;
     border-radius: 15px;
 }
 
 #unsplash {
     position: relative;
-    top: 150px;
-    left: 40%;
+    top: 0px;
+    left: 60px;
     border: none;
     border-radius: 10px;
     color: purple;
@@ -58,10 +73,12 @@ h4 {
     display: inline-block;
     font-size: 16px;
     background-color: #ffcba4;
+    outline: none;
+    cursor: pointer;
 }
 
 #unsplash:hover {
-    padding: 30px 60px;
+    padding: 30px 40px;
     transform: translateY(0);
 }
 
