--- a/ajax.css
+++ b/ajax.css
@@ -1,11 +1,16 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 * {
     box-sizing: border-box;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 html, body {
     margin: 0;
     height: 100%;
+    font-family: 'Roboto', cursive;
 }
 
 body {
@@ -18,12 +23,6 @@ body {
 h4 {
     text-align: center;
     margin-bottom: 10px;
-}
-
-.dog-img {
-    width: 300px;
-    height: 300px;
-    border-radius: 10px;
 }
 
 .image_content {
@@ -44,10 +43,7 @@ h4 {
 
 .container {
     background-color: #fff;
-    width: 250px;
-    height: 300px;
     border-radius: 15px;
-    
 }
 
 #unsplash {
@@ -78,6 +74,41 @@ h4 {
     height: 100%;
     width: 100%;
 }
+
+
+/* For iPhone */
+@media screen and (max-width: 375px) {
+    #image_content {
+        margin: auto;
+        width: 60%;
+        border: 5px solid #ffff00;
+        padding: 10px;
+    }
+
+    body {
+        background-color: white;
+    }
+}
+
+/* For other mobile */
+@media screen and (max-width: 480px) {
+
+}
+
+/* For iPad */
+@media only screen and (max-width: 768px) {
+    .image_content {
+        margin: 0;
+        width: 60%;
+        padding: 10px;
+        position: relative;
+        left: 200px;
+        top: 50px;
+    }
+}
+
+
+
 
 
 
