--- a/ajax.css
+++ b/ajax.css
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 * {
     box-sizing: border-box;
@@ -26,11 +25,6 @@ h4 {
 }
 
 .image_content {
-    position: relative;
-    top: 200px;
-    left: 500px;
-    width: 400px;
-    height: 400px;
     border-radius: 15px;
     background-color: #000080;
     margin: 0;
@@ -56,17 +50,17 @@ h4 {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    transition: .2s ease-in-out;
     display: inline-block;
     font-size: 16px;
     background-color: #000080;
     outline: none;
     cursor: pointer;
+    transition-timing-function: 0.2s;
 }
 
 #unsplash:hover {
-    padding: 30px 40px;
-    transform: translateY(0);
+    opacity: 0.5;
+    transition-duration: 0.2s;
 }
 
 #container {
@@ -77,57 +71,87 @@ h4 {
 
 /* Media Queries */
 
-
-/* For tablet */
-@media only screen and (max-width: 1024px) {
-    .image_content {
-        width: 60%;
-        height: 50%;
-        padding: 10px;
-    }
-
-    #unsplash {
-        position: relative;
-        left: 100px;
-    }
-}
-
-/* For iPad */
-@media only screen and (max-width: 768px) {
-    .image_content {
-        margin: 0;
-        width: 60%;
-        height: 50%;
-        padding: 10px;
-        position: relative;
-        left: 150px;
-        top: 50px;
-    }
-
-    button {
-        position: relative;
-        left: 100px;
-    }
-
-    body {
-        background: linear-gradient(-100deg, #23a6d5, #23d5ab);
-    }
-}
-
-/* For iPhone */
-@media only screen 
-    and (min-width: 375px) {
+/* For mobile */
+@media only screen and (min-width: 320px) and (max-width: 479px) {
     .image_content {
         margin: auto;
-        width: 60%;
+        width: 10em;
         height: 50%;
         padding: 10px;
         position: relative;
-        left: 5px;
+        top: 20%;
+        left: -21%;
+    }
+
+    #unsplash {
+        width: 10em;
+        position: relative;
+        left: 0.2em;
+        padding: 0.7em;
+    }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .image_content {
+        margin: auto;
+        height: 35%;
+        width: 50%;
+        position: relative;
+        top: 25%;
+    }
+
+    .container {
+        background-color: #fff;
+        border-radius: 15px;
     }
 
     #unsplash {
         position: relative;
-        left: 5px;
+        top: 4em;
+        left: 3em;
+        padding: 1em;
     }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .image_content {
+        margin: auto;
+        height: 40%;
+        width: 50%;
+        position: relative;
+        top: 25%;
+        left: 0%;
+    }
+    #unsplash {
+        position: relative;
+        top: 3em;
+        left: 6em;
+    }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+
+}
+
+/* For Desktop */
+
+@media only screen and (min-width: 1201px) and (max-width: 1400px) {
+    .image_content {
+        width: 60%;
+        height: 50%;
+        padding: 10px;
+        position: relative;
+        top: 50%;
+    }
+
+    #unsplash {
+        position: relative;
+        left: 100px;
+    }
+}
+
+
+/* For iPad */
+
+
+
