--- a/ajax.css
+++ b/ajax.css
@@ -35,6 +35,8 @@ h4 {
     align-items: center;
     border-radius: 10px;
     box-shadow: 8px 8px 8px #114d99;
+    margin-left: 23em;
+    margin-top: 10%;
 }
 
 .container {
@@ -58,10 +60,11 @@ h4 {
     outline: none;
     cursor: pointer;
     transition: .3s ease;
+    left: 35%;
 }
 
 #unsplash:hover {
-    opacity: 0.6;
+    opacity: 0.7;
     padding: 1em;
     transform: scale(1.2);
 }
@@ -163,7 +166,7 @@ h4 {
     #unsplash {
         position: relative;
         top: 4em;
-        left: 13em;
+        left: 35%;
     }
 }
 
@@ -179,7 +182,6 @@ h4 {
     #unsplash {
         position: relative;
         top: 4em;
-        left: 60em;
     }
 }
 
